# agent-relay

./: .gitignore  Cargo.toml  ISSUE-001-control-plane-server-lib.md
src/: bridge.rs  error.rs  lib.rs  librarian.rs  main.rs  pipe.rs  protocol.rs  session.rs
src/backend/: mod.rs  wt.rs
src/commands/: approve.rs  clean.rs  launch.rs  list.rs  mod.rs  ping.rs  raw_send.rs  read.rs  run.rs  sample.rs  sample_all.rs  send.rs  smoke.rs  state.rs  status.rs  stop.rs  tab.rs  tabs.rs  wait.rs
tests/: librarian_judgment.rs
tests/fixtures/: buffers.toml
